# hetzner-dyndns

./: Cargo.toml  Dockerfile
.github/workflows/: docker.yml
src/: auth.rs  hetzner.rs  main.rs
