[package]
name = "hetzner-dyndns"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-web-httpauth = "0.8.1"
serde = { version = "1.0.195", features = ["derive"] }
env_logger = { version = "0.11.0", features = [] }
awc = { version = "3.3.0", features = ["openssl"] }
serde_json = "1.0.111"
log = "0.4.20"
